fixed math; added sliders

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs/spiro/v16/Browse.VC.opendb
+/.vs/spiro/v16/Browse.VC.db-wal
+/.vs/spiro/v16/Browse.VC.db-shm
+/.vs/spiro/v16/Browse.VC.db
